--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,8 +95,9 @@ jobs:
       - name: Check that test data can be queried (measures)
         run: |
           yarn add @datadog/datadog-api-client
-          yarn check-junit-upload '@key1:20'
+          yarn check-junit-upload
         env:
+          EXTRA_QUERY_FILTER: key1:20
           DD_API_KEY: ${{ secrets.DD_API_KEY_CI_VISIBILITY }}
           DD_APP_KEY: ${{ secrets.DD_APP_KEY_CI_VISIBILITY }}
           DD_SERVICE: datadog-ci-e2e-tests-junit
@@ -107,8 +108,9 @@ jobs:
       - name: Check that test data can be queried (metrics)
         run: |
           yarn add @datadog/datadog-api-client
-          yarn check-junit-upload '@key2:40'
+          yarn check-junit-upload
         env:
+          EXTRA_QUERY_FILTER: key2:40
           DD_API_KEY: ${{ secrets.DD_API_KEY_CI_VISIBILITY }}
           DD_APP_KEY: ${{ secrets.DD_APP_KEY_CI_VISIBILITY }}
           DD_SERVICE: datadog-ci-e2e-tests-junit
