--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,46 @@
 name: Publish package on NPM
+
 on:
   release:
     types: [released]
+
+# Used for automated release notes
+# https://docs.github.com/en/repositories/releasing-projects-on-github/automatically-generated-release-notes
+#
+# See .github/workflows/pr-required-labels.yml
+changelog:
+  categories:
+    - title: Dependencies
+      labels:
+        - dependencies
+    - title: Documentation
+      labels:
+        - documentation
+    - title: Chores
+      labels:
+        - chores
+    - title: CI Visibility
+      labels:
+        - ci-visibility
+    - title: Statis Analysis
+      labels:
+        - static-analysis
+    - title: RUM
+      labels:
+        - rum
+    - title: Serverless
+      labels:
+        - serverless
+    - title: Source Code Integration
+      labels:
+        - source-code-integration
+    - title: Synthetics
+      labels:
+        - synthetics
+    - title: datadog-ci
+      labels:
+        - '*'
+
 jobs:
   build:
     runs-on: ubuntu-latest
