Change trigger to be on tag

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,10 @@
 name: Publish package on NPM
+
 on:
-  release:
-    types: [released]
+  push:
+    tags:
+      - v* # Any version tag
+
 jobs:
   build:
     runs-on: ubuntu-latest
