--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,9 @@
 name: Publish package on NPM
 
 on:
-  release:
-    types: [released]
+  push:
+    tags:
+      - v* # Any version tag
 
 # Used for automated release notes
 # https://docs.github.com/en/repositories/releasing-projects-on-github/automatically-generated-release-notes
@@ -42,8 +43,159 @@ changelog:
         - '*'
 
 jobs:
-  build:
+  create-draft-release:
     runs-on: ubuntu-latest
+    outputs:
+      release-id: ${{ steps.draft-release.outputs.result }}
+    steps:
+      - name: Create a draft release
+        uses: actions/github-script@v7
+        id: draft-release
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const { data: releaseNotes } = await github.rest.repos.generateReleaseNotes({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag_name: '${{ github.ref_name }}',
+            })
+
+            const { data: release } = await github.rest.repos.createRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag_name: '${{ github.ref_name }}',
+              name: '${{ github.ref_name }}',
+              draft: true,
+              prerelease: false,
+              body: releaseNotes.body,
+            })
+
+            await core.summary
+              .addHeading('Draft release created')
+              .addRaw('Find it here: ')
+              .addLink('${{ github.ref_name }} (draft)', release.html_url)
+              .addBreak()
+              .addBreak()
+              .addRaw('Copy the release notes below, and paste them inside your release PR.')
+              .addBreak()
+              .addBreak()
+              .addCodeBlock(releaseNotes.body, 'markdown')
+              .write()
+
+            return release.id
+
+  build-binary-ubuntu:
+    runs-on: ubuntu-latest
+    needs: create-draft-release
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '14.18.3'
+      - name: Install project dependencies
+        run: yarn install --immutable
+      - name: Bundle library
+        run: yarn build
+      - name: Create standalone binary
+        run: yarn dist-standalone -t node14-linux-x64 -o datadog-ci_linux-x64
+      - name: Remove dist folder to check that binary can stand alone
+        run: |
+          rm -rf dist
+          rm -rf src
+      - name: Test generated standalone binary
+        run: yarn dist-standalone:test
+      - name: Upload release asset
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const fs = require("fs").promises
+
+            github.rest.repos.uploadReleaseAsset({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              release_id: "${{ needs.create-draft-release.outputs.release-id }}",
+              name: 'datadog-ci_linux-x64',
+              data: await fs.readFile('./datadog-ci_linux-x64'),
+            })
+
+  build-binary-windows:
+    runs-on: windows-latest
+    needs: create-draft-release
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '14.18.3'
+      - name: Install project dependencies
+        run: yarn install --immutable
+      - name: Bundle library
+        run: yarn build:win
+      - name: Create standalone binary
+        run: yarn dist-standalone -t node14-win-x64 -o datadog-ci_win-x64
+      - name: Remove dist folder to check that binary can stand alone
+        run: |
+          rm dist -r
+          rm src -r
+      - name: Test generated standalone binary
+        run: yarn dist-standalone:test
+      - name: Upload release asset
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const fs = require("fs").promises
+
+            github.rest.repos.uploadReleaseAsset({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              release_id: "${{ needs.create-draft-release.outputs.release-id }}",
+              name: 'datadog-ci_win-x64',
+              data: await fs.readFile('./datadog-ci_win-x64'),
+            })
+
+  build-binary-macos:
+    runs-on: macos-latest
+    needs: create-draft-release
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '14.18.3'
+      - name: Install project dependencies
+        run: yarn install --immutable
+      - name: Bundle library
+        run: yarn build
+      - name: Create standalone binary
+        run: yarn dist-standalone -t node14-macos-x64 -o datadog-ci_darwin-x64
+      - name: Remove dist folder to check that binary can stand alone
+        run: |
+          rm -rf dist
+          rm -rf src
+      - name: Test generated standalone binary
+        run: yarn dist-standalone:test
+      - name: Upload release asset
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const fs = require("fs").promises
+
+            github.rest.repos.uploadReleaseAsset({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              release_id: "${{ needs.create-draft-release.outputs.release-id }}",
+              name: 'datadog-ci_darwin-x64',
+              data: await fs.readFile('./datadog-ci_darwin-x64'),
+            })
+
+  # Requires an approval
+  npm-publish:
+    runs-on: ubuntu-latest
+    environment: npm
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -57,7 +209,7 @@ jobs:
   bump-ci-integrations:
     name: Bump datadog-ci in integration
     runs-on: ubuntu-latest
-    needs: build
+    needs: npm-publish
     strategy:
       fail-fast: false
       matrix:
@@ -83,82 +235,4 @@ jobs:
               inputs: {
                 datadog_ci_version: tagName,
               },
-            });
-
-  build-binary-ubuntu:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '14.18.3'
-      - name: Install project dependencies
-        run: yarn install --immutable
-      - name: Bundle library
-        run: yarn build
-      - name: Create standalone binary
-        run: yarn dist-standalone -t node14-linux-x64 -o datadog-ci_linux-x64
-      - name: Remove dist folder to check that binary can stand alone
-        run: |
-          rm -rf dist
-          rm -rf src
-      - name: Test generated standalone binary
-        run: yarn dist-standalone:test
-      - name: Upload binaries to GitHub release
-        uses: shogo82148/actions-upload-release-asset@v1
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./datadog-ci_linux-x64
-
-  build-binary-windows:
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '14.18.3'
-      - name: Install project dependencies
-        run: yarn install --immutable
-      - name: Bundle library
-        run: yarn build:win
-      - name: Create standalone binary
-        run: yarn dist-standalone -t node14-win-x64 -o datadog-ci_win-x64
-      - name: Remove dist folder to check that binary can stand alone
-        run: |
-          rm dist -r
-          rm src -r
-      - name: Test generated standalone binary
-        run: yarn dist-standalone:test
-      - name: Upload binaries to GitHub release
-        uses: shogo82148/actions-upload-release-asset@v1
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./datadog-ci_win-x64.exe
-
-  build-binary-macos:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '14.18.3'
-      - name: Install project dependencies
-        run: yarn install --immutable
-      - name: Bundle library
-        run: yarn build
-      - name: Create standalone binary
-        run: yarn dist-standalone -t node14-macos-x64 -o datadog-ci_darwin-x64
-      - name: Remove dist folder to check that binary can stand alone
-        run: |
-          rm -rf dist
-          rm -rf src
-      - name: Test generated standalone binary
-        run: yarn dist-standalone:test
-      - name: Upload binaries to GitHub release
-        uses: shogo82148/actions-upload-release-asset@v1
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./datadog-ci_darwin-x64
+            })
