--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "@babel/core": "7.8.0",
     "@babel/preset-env": "7.4.5",
     "@babel/preset-typescript": "7.3.3",
+    "@datadog/datadog-ci": "^2.32.0",
     "@microsoft/eslint-formatter-sarif": "^3.0.0",
     "@types/async-retry": "1.4.2",
     "@types/deep-extend": "0.4.31",
