--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,9 +77,8 @@ jobs:
           node-version: ${{ matrix.version }}
       - uses: actions/download-artifact@v4
         with:
+          name: artifacts-${{ matrix.version }}
           path: artifacts/
-          pattern: artifacts-*
-          merge-multiple: true
       - run: yarn add ./artifacts/datadog-ci-${{ matrix.version }}.tgz
       - name: Run synthetics test
         run: yarn datadog-ci synthetics run-tests --config artifacts/e2e/global.config.json
