feat: Skip dependency checks to avoid namespace failure of LRUCache for proxy-agent

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "noImplicitAny": true,
     "moduleResolution": "node",
     "baseUrl": "./",
+    "skipLibCheck": true,
     "paths": {
       "*": ["node_modules/*"]
     },
